# seance

./: .gitignore  Cargo.toml  LICENSE
.codex/skills/qa-macos-ui/: SKILL.md
.codex/skills/qa-macos-ui/references/: workflow.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  debug.rs  main.rs
src/agent/: claude.rs  codex.rs  mod.rs  prompt.rs
src/command/: add.rs  capture.rs  checkout.rs  clean.rs  close.rs  config.rs  detect.rs  focus.rs  init.rs  list.rs  merge.rs  mod.rs  remove.rs  repo.rs  send.rs  sleep.rs  status.rs  wait.rs  wake.rs
src/config/: mod.rs  schema.rs
src/dashboard/: app.rs  keymap.rs  mod.rs
src/dashboard/theme/: default.rs
src/dashboard/ui/: mod.rs
src/files/: ops.rs
src/ghostty/: applescript.rs  mod.rs
src/git/: branch.rs  merge.rs  mod.rs  worktree.rs
src/layout/: mod.rs  monitor.rs  quadrant.rs
src/session/: mod.rs  spirit.rs  store.rs
