[package]
name = "seance"
version = "0.1.0"
edition = "2024"
description = "A gathering of spirits — Ghostty-native workspace orchestrator for parallel AI coding sessions"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Git
git2 = "0.19"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
